# MokyaLora

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CC-BY-SA-4.0.txt  LICENSE-CERN-OHL-S-2.0.txt  NOTICE  README.md  bringup_run.ps1  bringup_test_all.ps1  build_and_flash_bringup.sh  build_bringup.sh  build_mie.bat  build_mie_gui.bat  configure_bringup.sh  flash_bringup.sh  flash_core1_bringup.sh  flash_core1_freertos.sh  flash_gnss_tft.sh  jlink_step11a.jlink  read_freertos.ps1  send_sram.py  serial_monitor.ps1  step11b.gdb
firmware/: CMakeLists.txt
firmware/core0/: CMakeLists.txt  LICENSE
firmware/core1/: CMakeLists.txt  LICENSE
firmware/core1/lfs/: README.md  lfs_util.h
firmware/core1/m1_bridge/: CMakeLists.txt  memmap_core1_bridge.ld  toolchain-arm-none-eabi.cmake
firmware/core1/m1_bridge/boards/: mokya_rev_a.h
firmware/core1/m1_bridge/src/: FreeRTOSConfig.h  core1_reset.S  lv_conf.h  main_core1_bridge.c  tusb_config.h  usb_descriptors.c
firmware/core1/src/debug/: cpu_load.c  cpu_load.h  mokya_trace.c  mokya_trace.h  msp_canary.c  msp_canary.h  postmortem.c  postmortem.h
firmware/core1/src/display/: display.c  display.h  lvgl_glue.c  lvgl_glue.h  mie_font.c  mie_font.h  mie_font_blob.S  mie_font_partition.h  st7789vi.c  st7789vi.h  tft_8080.pio
firmware/core1/src/i2c/: i2c_bus.c  i2c_bus.h
firmware/core1/src/ime/: draft_store.c  draft_store.h  flash_safety_wrap.c  ime_task.cpp  ime_task.h  lru_persist.cpp  lru_persist.h  mie_dict_loader.c  mie_dict_loader.h  mie_dict_partition.h  mie_lru_partition.h
firmware/core1/src/keypad/: key_event.c  key_event.h  key_inject.c  key_inject.h  key_inject_frame.c  key_inject_frame.h  key_inject_rtt.c  key_inject_rtt.h  key_name.h  keymap_matrix.h  keypad_min.c  keypad_min.h  keypad_scan.c  keypad_scan.h  keypad_scan.pio
firmware/core1/src/messages/: dm_persist.c  dm_persist.h  dm_store.c  dm_store.h  lora_test_log.c  lora_test_log.h  messages_inbox.c  messages_inbox.h  messages_send.c  messages_send.h  messages_tx_status.c  messages_tx_status.h  node_alias.c  node_alias.h  nodes_db.c  nodes_db.h  notif_persist.c  notif_persist.h  notification.c  notification.h  packet_log.c  packet_log.h  range_test_log.c  range_test_log.h  wall_clock.c  wall_clock.h
firmware/core1/src/metrics/: history.c  history.h  history_persist.c  history_persist.h
firmware/core1/src/phoneapi/: phoneapi_cache.c  phoneapi_cache.h  phoneapi_decode.c  phoneapi_decode.h  phoneapi_encode.c  phoneapi_encode.h  phoneapi_framing.c  phoneapi_framing.h  phoneapi_session.c  phoneapi_session.h  phoneapi_tx.c  phoneapi_tx.h  waypoint_persist.c  waypoint_persist.h
firmware/core1/src/power/: bq25622.c  bq25622.h  bq27441.c  bq27441.h  lm27965.c  lm27965.h  vib_motor.c  vib_motor.h  watchdog_task.c  watchdog_task.h
firmware/core1/src/psram/: psram.c  psram.h
firmware/core1/src/sensor/: gps_dummy.c  gps_dummy.h  gps_task.c  gps_task.h  lis2mdl.c  lis2mdl.h  lps22hh.c  lps22hh.h  lsm6dsv16x.c  lsm6dsv16x.h  sensor_task.c  sensor_task.h  teseo_liv3fl.c  teseo_liv3fl.h
firmware/core1/src/settings/: settings_client.c  settings_client.h  settings_keys.c  settings_keys.h
firmware/core1/src/storage/: c1_storage.c  c1_storage.h  lfs_blockdev.c  lfs_blockdev.h  lfs_user_config.h
firmware/core1/src/ui/: boot_home_view.c  boot_home_view.h  canned_messages.c  canned_messages.h  canned_view.c  canned_view.h  channel_add_view.c  channel_add_view.h  channel_edit_view.c  channel_edit_view.h  channel_share_view.c  channel_share_view.h  channels_view.c  channels_view.h  chat_list_view.c  chat_list_view.h  conversation_view.c  conversation_view.h  firmware_info_view.c  firmware_info_view.h  font_test_view.c  font_test_view.h  gnss_sky_view.c  gnss_sky_view.h  hw_diag_view.c  hw_diag_view.h  ime_view.c  ime_view.h  keypad_view.c  keypad_view.h  launcher_view.c  launcher_view.h  lora_test_view.c  lora_test_view.h  map_nav_view.c  map_nav_view.h  map_view.c  map_view.h  message_detail_view.c  message_detail_view.h  (+47 more)
firmware/core1/src/util/: base64_url.c  base64_url.h  channel_share_url.c  channel_share_url.h
firmware/core1/test/m1_bootspike/: CMakeLists.txt  memmap_core1_bootspike.ld  toolchain-arm-none-eabi.cmake
firmware/mie/: CMakeLists.txt  LICENSE  README.md
firmware/mie/data/: README.md
firmware/mie/hal/: hal_port.h
firmware/mie/hal/pc/: hal_pc_stdin.cpp  (+2 more)
firmware/mie/src/: composition_searcher.cpp  ime_commit.cpp  ime_direct.cpp  ime_display.cpp  ime_internal.h  ime_keys.cpp  ime_logic.cpp  ime_search.cpp  ime_smart.cpp  lru_cache.cpp  mie_c_api.cpp  mie_init.cpp  trie_searcher.cpp  utf8.c
firmware/mie/tests/: CMakeLists.txt  test_composition_searcher.cpp  test_gen_dict.py  test_helpers.h  test_ime_advanced.cpp  test_ime_basic.cpp  test_ime_core.cpp  test_ime_direct.cpp  test_ime_logic.cpp  test_ime_lru.cpp  test_ime_modes.cpp  test_ime_smart.cpp  test_ime_timer.cpp  test_ime_v4_dispatch.cpp  test_lru_cache.cpp  test_mie_c_api.cpp  test_position_counter.cpp  test_trie_searcher.cpp  test_trie_stub.cpp  test_utf8.cpp
firmware/mie/tools/: fetch_data.py  gen_dict.py  gen_font.py  mie_gui.cpp  mie_repl.cpp  pack_dict_blob.py  test_pack_dict_blob.py
firmware/shared/ipc/: LICENSE  ipc_protocol.h  ipc_ringbuf.c  ipc_ringbuf.h  ipc_shared_layout.h  mokya_postmortem.h
firmware/tools/: CMakeLists.txt  recv_pcm_dump.py
firmware/tools/bringup/: CMakeLists.txt  FreeRTOSConfig.h  OpenPDMFilter.c  OpenPDMFilter.h  bringup.h  bringup_amp.c  bringup_amp.h  bringup_audio.c  bringup_bq25622.h  bringup_bq27441.h  bringup_charger.c  bringup_core1.c  bringup_flash.c  bringup_gauge.c  bringup_gnss_tft.c  bringup_led.c  bringup_lm27965.h  bringup_lora.c  bringup_memory_tft.c  bringup_menu.c  bringup_menu.h  bringup_mic.c  bringup_pins.h  bringup_power.c  bringup_power.h  bringup_psram.c  bringup_sensors.c  bringup_sram.c  bringup_sx1262.h  bringup_tft.c  bringup_tft_draw.c  core1_bringup_test_main.c  core1_freertos_test.c  core1_rtos_efgh.c  gnss_tft_main.c  i2c_custom_scan.c  i2s_out.pio  main_core0.c  pdm_mic.pio  tft_8080.pio
(+341 files in other folders)
